# embedded_encrypt

./: Encryption.h  README.md  VeryEncrypt.h  library.json  platformio.ini  pyproject.toml
Encrypt/: Encryption.cpp
VeryEncrypt/: VeryEncrypt.cpp  VeryEncrypt.h
lib/Encryption/: Encryption.h
test/: test_encryption.cpp
